# agentic_coding_stack

./: LICENSE  README.md  pyproject.toml
Docs/: 01-architecture.md  02-memory-model.md  03-implementation-spec.md  04-api-contracts.md  05-codex-handoff-prompt.md  06-build-order-and-acceptance.md  07-config-examples.md  08-schema-examples.md  09-omlx-integration-notes.md
apps/conductor/: main.py
apps/conductor/db/: models.py
apps/conductor/services/: arbiter.py  candidate_generation.py  control_plane.py  decision_state.py  escalation.py  execution.py  feasibility.py  frontier.py  governance.py  invariants.py  memory_writer.py  overlay_state.py  package_semantics.py  pr_writer.py  reliability.py  retrieval.py
apps/worker/: main.py
shared/clients/: omlx_client.py  worker_client.py
shared/config/: settings.py
shared/schemas/: models.py
shared/utils/: auth.py  parsing.py
tests/: test_arbiter.py  test_auth.py  test_candidate_generation.py  test_candidate_schema_rejection.py  test_config.py  test_execution.py  test_feasibility.py  test_frontier.py  test_health_smoke.py  test_milestone10_verification.py  test_milestone6_memory_pr.py  test_milestone8_reliability.py  test_milestone9_controls.py  test_omlx_client.py  test_overlay_milestone7a.py  test_package_semantics.py  test_readme_milestone_alignment.py  test_repair_milestone7b.py  test_retrieval_ingestion.py  test_schema_validation.py  test_worker_client.py  test_worker_safety.py
